[package]
name = "commands"
version = "0.1.0"
edition = "2021"
description = "Small helpers to make dealing with CLIs less annoying"
authors = ["Natalie Jameson <natalie@natalie.wtf>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
derivative = "2.2.0"
dirs = "4.0.0"
gazebo = "0.8.0"
hostname = "0.3.1"
itertools = "0.10.3"
log = "0.4.17"
serde = {version="1.0.140", features = ["derive"]}
serde_json = "1.0.82"
tee = { git = "ssh://git@github.com/nataliejameson/tee", version = "0.1.0" }
paths = { git = "ssh://git@github.com/nataliejameson/paths", version = "0.1.0" }
tempfile = "3.3.0"
thiserror = "1.0.31"
tracing = "0.1.36"
