[package]
name = "commands"
version = "0.1.0"
edition = "2021"
description = "Small helpers to make dealing with CLIs less annoying"
authors = ["Natalie Jameson <natalie@natalie.wtf>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dirs = { version = "4.0.0" }
hostname = { version = "0.3.1" }
itertools = { version = "0.10.3" }
log = { version = "0.4.17" }
maplit = { version = "1.0.2" }
paths = { git = "https://github.com/nataliejameson/paths", tag = "0.1.0" }
serde = { version = "1.0.143", features = ["derive"] }
tee = { git = "https://github.com/nataliejameson/tee", tag = "0.1.0" }
tempfile = { version = "3.3.0" }
thiserror = { version = "1.0.32" }
